# opencode-mem

./: .gitignore  AGENTS.md  CONTRIBUTING.md  PHASE1_IMPLEMENTATION.md  PHASE2_IMPLEMENTATION.md  README.md  RELEASE_NOTES_v0.2.0.md  bedrock-agent-bug-report.md  index.js  package.json  pyproject.toml
.beads/: issues.jsonl
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/workflows/: ci.yml  release.yml
.opencode/plugin/: codemem.js  compat.js  compat.test.js  opencode-mem.js
.opencode/tests/: compat.test.js
codemem/: capture.py  cli.py  cli_app.py  config.py  db.py  fs_paths.py  git_info.py  hybrid_eval.py  ingest_sanitize.py  ingest_tool_events.py  mcp_server.py  memory_kinds.py  observer.py  observer_auth.py  observer_codex.py  observer_config.py  observer_prompts.py  plugin_ingest.py  raw_event_flush.py  redaction.py  semantic.py  summarizer.py  sync_api.py  sync_auth.py  sync_identity.py  sync_runtime.py  utils.py  viewer.py  viewer_assets.py  viewer_http.py  viewer_raw_events.py
codemem/commands/: common.py  import_export_cmds.py  import_from_claude_mem.py  maintenance_cmds.py  memory_cmds.py  opencode_integration_cmds.py  raw_events_cmds.py  sync_cmds.py  sync_service_cmds.py  viewer_cmds.py
codemem/ingest/: __init__.py  context.py  events.py  persist.py  transcript.py  types.py
codemem/store/: _store.py  maintenance.py  packs.py  raw_events.py  replication.py  search.py  usage.py
codemem/sync/: __init__.py  daemon.py  discovery.py  http_client.py  replication.py  sync_pass.py
codemem/viewer_routes/: __init__.py  raw_events.py  stats.py  sync.py
codemem/viewer_static/: app.js  app.js.map  index.html
docs/: architecture.md  plugin-reference.md  rename-migration.md  user-guide.md  versioning.md
docs/autostart/systemd/: codemem-sync.service  (+1 more)
docs/plans/: 2026-01-15-opencode-oauth-observer.md  2026-01-23-stream-only-rollout.md  2026-01-24-p2p-sync-phase-1.md  2026-01-24-p2p-sync-phase-2.md
opencode_mem/: __init__.py  capture.py  classifier.py  cli.py  cli_app.py  config.py  db.py  mcp_server.py  net.py  observer.py  observer_auth.py  observer_prompts.py  pack_benchmark.py  plugin_ingest.py  raw_event_flush.py  semantic.py  store.py  summarizer.py  sync_api.py  sync_auth.py  sync_daemon.py  sync_discovery.py  sync_identity.py  sync_runtime.py  utils.py  viewer.py  viewer_assets.py  viewer_html.py  viewer_http.py  viewer_raw_events.py  xml_parser.py
opencode_mem/commands/: common.py  db_cmds.py  import_export_cmds.py  import_from_claude_mem.py  maintenance_cmds.py  memory_cmds.py  opencode_integration_cmds.py  raw_events_cmds.py  sync_cmds.py  sync_service_cmds.py  viewer_cmds.py
opencode_mem/ingest/: context.py  events.py
opencode_mem/store/: __init__.py  _store.py  maintenance.py  raw_events.py  replication.py  search.py  tags.py  types.py  utils.py  vectors.py
opencode_mem/sync/: http_client.py  sync_pass.py
opencode_mem/viewer_routes/: __init__.py  config.py  memory.py  raw_events.py  sync.py
opencode_mem/viewer_static/: app.js  index.html
tests/: conftest.py  test_cli_help.py  test_config.py  test_contracts.py  test_db_schema.py  test_e2e_pipeline.py  test_hybrid_eval.py  test_import_claude_mem.py  test_import_export.py  test_ingest_events.py  test_ingest_sanitize.py  test_ingest_tool_events.py  test_net.py  test_observer_auth.py  test_observer_codex.py  test_observer_config.py  test_observer_provider_loop.py  test_pack_benchmark.py  test_pack_filter_invariants.py  test_plugin_ingest.py  test_plugin_ingest_characterization.py  test_raw_event_autoflush.py  test_raw_event_flush.py  test_raw_event_queue_states.py  test_raw_event_retry.py  test_raw_event_stuck_batches.py  test_raw_event_sweeper.py  test_store.py  test_sync_api.py  test_sync_api_security.py  test_sync_attempts_cli.py  test_sync_auth.py  test_sync_cli.py  test_sync_convergence.py  test_sync_daemon.py  test_sync_discovery.py  test_sync_http_client.py  test_sync_identity.py  test_sync_protocol.py  test_sync_runtime.py  (+9 more)
viewer_ui/: package.json  vite.config.ts
viewer_ui/src/: app.ts
(+2 files in other folders)
