[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["opencode_mem"]

[tool.hatch.build.targets.wheel.force-include]
".opencode/plugin/opencode-mem.js" = "opencode_mem/.opencode/plugin/opencode-mem.js"

[tool.hatch.build.targets.sdist]
include = [
  "opencode_mem/",
  ".opencode/plugin/opencode-mem.js",
]

[project]
name = "opencode-mem"
version = "0.3.4"
description = "Persistent memory layer for OpenCode CLI with MCP server and wrapper capture"
authors = [{name = "OpenCode", email = "hello@opencode.dev"}]
requires-python = ">=3.11,<3.15"
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "mcp>=1.2",
  "openai>=1.0",
]

[project.optional-dependencies]
semantic = ["fastembed>=0.3.6"]

[dependency-groups]
dev = ["pytest>=8.2", "pytest-cov>=5.0", "ruff>=0.8"]

[project.scripts]
opencode-mem = "opencode_mem.cli:main"
opencode-mem-mcp = "opencode_mem.mcp_server:run"

[tool.pytest.ini_options]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
  "E",      # pycodestyle errors
  "W",      # pycodestyle warnings
  "F",      # pyflakes
  "I",      # isort
  "UP",     # pyupgrade
  "B",      # flake8-bugbear
  "SIM",    # flake8-simplify
]
ignore = [
  "E501",   # line too long (handled by formatter)
  "B008",   # function call in argument defaults (required by typer)
]

[tool.ruff.lint.isort]
known-first-party = ["opencode_mem"]

[tool.coverage.run]
source = ["opencode_mem"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]
